--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".detail.DetailActivity">
+    tools:context=".detailMovie.DetailMovieActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -31,7 +31,8 @@
                 android:fitsSystemWindows="true"
                 android:src="@drawable/ic_launcher_background"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                android:contentDescription="TODO" />
 
             <View
                 android:layout_width="match_parent"
@@ -152,7 +153,8 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars[3]" />
+                tools:srcCompat="@tools:sample/avatars[3]"
+                android:contentDescription="TODO" />
 
             <LinearLayout
                 android:id="@+id/bx_viewer"
